build: Update pom.